<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">



        <EditText
            android:id="@+id/nazivET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Naziv" />

        <EditText
            android:id="@+id/porodicaET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Porodica" />

        <EditText
            android:id="@+id/medicinskoUpozorenjeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Medicinsko upozorenje" />

                <EditText
                    android:id="@+id/jeloET"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:hint="Jelo" />

                <Button
                    android:id="@+id/dodajJeloBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Dodaj jelo" />
        <!-- ListViews sa opcijama -->

                <ListView
                    android:id="@+id/medicinskaKoristLV"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:choiceMode="multipleChoice" />

                <ListView
                    android:id="@+id/klimatskiTipLV"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:choiceMode="multipleChoice" />

                <ListView
                    android:id="@+id/zemljisniTipLV"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:choiceMode="multipleChoice" />

                <ListView
                    android:id="@+id/profilOkusaLV"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:choiceMode="singleChoice" />

                <ListView
                    android:id="@+id/jelaLV"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp" />

        <!-- Buttoni -->


        <Button
            android:id="@+id/dodajBiljkuBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dodaj biljku" />

        <Button
            android:id="@+id/uslikajBiljkuBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Uslikaj biljku" />

                    <ImageView
                        android:id="@+id/slikaIV"
                        android:layout_width="wrap_content"
                        android:layout_height="140dp"
                        android:src="@drawable/biljka" />


            </LinearLayout>

        </ScrollView>

</LinearLayout>